TagList : Apply Link on Card

--- a/src/templates/tag-list.scss
+++ b/src/templates/tag-list.scss
@@ -8,7 +8,7 @@
     lost-waffle: 1/2;
 }
 
-.WaffleGridSection__grid .tagBlock a{
+.WaffleGridSection__grid .tagBlock{
     color: #fff;
 }
 @media (max-width: 500px) {
