--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -16,11 +16,11 @@
             padding: 30px 20px 0;
             &:after {
                 background: $color-gray-border;
-                background: linear-gradient(to bottom, $color-gray-border 0%, $color-gray-border 48%, $color-white 100%);
+                background: linear-gradient(to bottom, $color-gray-border 0%, $color-gray-border 48%);
                 position: absolute;
                 content: '';
                 width: 1px;
-                height: 540px;
+                height: 100%;
                 top: 30px;
                 right: -10px;
                 bottom: 0;
